# league_of_legends_client

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/client/: mod.rs
src/client/context/: mod.rs
src/client/options/: mod.rs
src/dto/: mod.rs
src/dto/error/: mod.rs
src/dto/league_entry/: mod.rs
src/dto/league_item/: mod.rs
src/dto/league_list/: mod.rs
src/dto/mastery/: mod.rs
src/dto/match/: mod.rs
src/dto/match_list/: mod.rs
src/dto/match_reference/: mod.rs
src/dto/mini_series/: mod.rs
src/dto/participant/: mod.rs
src/dto/participant_identity/: mod.rs
src/dto/participant_stats/: mod.rs
src/dto/participant_timeline/: mod.rs
src/dto/player/: mod.rs
src/dto/rune/: mod.rs
src/dto/summoner/: mod.rs
src/dto/team_bands/: mod.rs
src/dto/team_stats/: mod.rs
src/enums/: mod.rs
src/enums/division/: mod.rs
src/enums/queue/: mod.rs
src/enums/region/: mod.rs
src/enums/tier/: mod.rs
src/error/: mod.rs
src/league/: mod.rs
src/match/: mod.rs
src/proxy/: mod.rs  rate_limit.rs
src/summoner/: mod.rs
src/types/: mod.rs
src/types/error/: mod.rs
src/types/game_result/: mod.rs
src/types/highest_achieved_season_tier/: mod.rs
src/types/lane/: mod.rs
src/types/league_entry/: mod.rs
src/types/league_item/: mod.rs
src/types/league_list/: mod.rs
src/types/mastery/: mod.rs
src/types/match/: mod.rs
src/types/match_list/: mod.rs
src/types/match_reference/: mod.rs
src/types/mini_series/: mod.rs
src/types/participant/: mod.rs
src/types/participant_identity/: mod.rs
src/types/participant_stats/: mod.rs
(+8 files in other folders)
