[package]
name = "league_of_legends_client"
version = "0.1.0"
authors = ["Zach LeBlanc <zachleb112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1" 
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
url = "2.2"
